lib/common-music/sa/include/sa.h

/** Exports for main SWIG wrapper SndObj_wrap.cpp **/

EXPORT bool _wrap_SndObj_IsProcessing (SndObj *larg1);
EXPORT int _wrap_SndObj_GetError (SndObj *larg1);
EXPORT SndObj *_wrap_SndObj_SndObjEqualSndObj (SndObj *larg1, SndObj *larg2);
EXPORT SndObj *_wrap_SndObj_SndObjSumAssignSndObj (SndObj *larg1, SndObj *larg2);
EXPORT SndObj *_wrap_SndObj_SndObjSubtractAssignSndObj (SndObj *larg1, SndObj *larg2);
EXPORT SndObj *_wrap_SndObj_SndObjMultiplyAssignSndObj (SndObj *larg1, SndObj *larg2);
EXPORT SndObj *_wrap_SndObj_SndObjSumAssignFloat (SndObj *larg1, float larg2);
EXPORT SndObj *_wrap_SndObj_SndObjSubtractAssignFloat (SndObj *larg1, float larg2);
EXPORT SndObj *_wrap_SndObj_SndObjMultiplyAssignFloat (SndObj *larg1, float larg2);
EXPORT SndObj *_wrap_SndObj_SndObjSumSndObj (SndObj *larg1, SndObj *larg2);
EXPORT SndObj *_wrap_SndObj_SndObjSubtractSndObj (SndObj *larg1, SndObj *larg2);
EXPORT SndObj *_wrap_SndObj_SndObjMultiplySndObj (SndObj *larg1, SndObj *larg2);
EXPORT SndObj *_wrap_SndObj_SndObjSumFloat (SndObj *larg1, float larg2);
EXPORT SndObj *_wrap_SndObj_SndObjSubtractFloat (SndObj *larg1, float larg2);
EXPORT SndObj *_wrap_SndObj_SndObjMultiplyFloat (SndObj *larg1, float larg2);
EXPORT void _wrap_SndObj_SndObjShiftLeftFloat (SndObj *larg1, float larg2);
EXPORT void _wrap_SndObj_SndObjShiftLeftFloatVector (SndObj *larg1, float *larg2);
EXPORT void _wrap_SndObj_SndObjShiftRightSndIO (SndObj *larg1, SndIO *larg2);
EXPORT void _wrap_SndObj_SndObjShiftLeftSndIO (SndObj *larg1, SndIO *larg2);
EXPORT int _wrap_SndObj_PushIn (SndObj *larg1, float *larg2, int larg3);
EXPORT int _wrap_SndObj_PopOut (SndObj *larg1, float *larg2, int larg3);
EXPORT int _wrap_SndObj_AddOut (SndObj *larg1, float *larg2, int larg3);
EXPORT void _wrap_SndObj_GetMsgList (SndObj *larg1, string *larg2);
EXPORT void _wrap_SndObj_Enable (SndObj *larg1);
EXPORT void _wrap_SndObj_Disable (SndObj *larg1);
EXPORT float _wrap_SndObj_Output (SndObj *larg1, int larg2);
EXPORT int _wrap_SndObj_GetVectorSize (SndObj *larg1);
EXPORT Synth *_wrap_new_Synth (int larg1, SndObj **larg2, long larg3, void (*larg4)(SndObj *), int larg5, float larg6);