lib/common-music/sa/cffi-sa.lisp

(in-package :cl-user)

(defvar *libsa*
  (let ((type #+(or darwin macos macosx) "dylib"
              #+(or linux linux-target (and unix pc386) freebsd) "so"
              #+(or win32 microsoft-32 cygwin) "dll")
        (paths (list (truename *load-pathname*) "/usr/local/lib"
		     "/usr/lib/")))
    (loop for d in paths
       for p = (make-pathname :name "libsa" :type type :defaults d)
       when (probe-file p) do (return p)
       finally  
         (error "Library \"libsa\".~A\" not found. Fix cl-user::*libsa*."
                type))))

(cffi:load-foreign-library *libsa*)

(defpackage :sa
  (:use :common-lisp :cffi)
  (:export :adsr :iadsr :balance :buzz :convol :delay-line :comb :all-pass :fir :pitch-transpose
	   :sndloop :string-flt :pluck :tap :tapi :vdelay :fast-osc :osc :osci :fft :pva
	   :if-gram :bp-filter :hipass :lopass :lp-reson :bp-reson :tptz :ap :butt-hp :butt-br :butt-hp
	   :butt-lp :gain :hilb :ifft :pvs :pvread :interp-line :table-lookup :table-lookupi :oscil :oscili
	   :phoscili :oscilt :pan :phase :rand :randh :randi :ring-mod :set-input1 :set-input2
	   :sin-anal :sin-syn :re-syn :ad-syn :if-add :snd-in :snd-read :spec-in :spec-mult 
	   :pv-blur :pv-mix :pv-transp :spec-cart :spec-combine :spec-interp :pv-morph 
	   :pv-mask :pv-filter :spec-polar :spec-split :spec-thresh :spec-voc :sync-grain
	   :snd-io :snd-buffer :snd-fio :snd-wave :snd-wavex :snd-pvocex :snd-sin-io :snd-aiff
	   :env-table :hamming-table :harm-table :impulse-table :lopass-table :note-table 
	   :pln-table :pv-env-table :spec-env-table :pv-table :triseg-table :snd-table 
	   :usr-def-table :usr-harm-table :acos~ :asin~ :atan~ :atan2 :cos~ :sin~ :tan~ 
	   :acosh~ :asinh~ :atanh~ :cash~ :sinh~ :tanh~ :exp~ :exp2~ :expm1~ :log~ :log10~
	   :log2~ :log1p~ :logb :fabs~ :cbrt~ :hypot~ :pow~ :sqrt~ :ceil~ :floor~ :fdim~
	   :fmax~ :fmin~ :*~ :/~ :+~ :-~ :>~ :>=~ :<~ :<=~ :and~ :or~ :not~ :if~ :rtoutput
	   :bus-write :bus-read :pvocexread :out~ :make-env :synt :defsynth :map-sndobjs
	   :set-sr :set-max-amp :sustain :release :set-adsr :set-parameter :do-process :destroy :set-init 
	   :set-end :set-inputs :set-lp-freq :connect :set-amp :set-harm :set-impulse :set-delaytime 
	   :get-delaytime :reset-delay-line :set-gain :set-semitones :set-xfade :set-pitch :re-sample :set-decay 
	   :set-freq :set-fdbgain :re-pluck :set-delay-tap :set-delay-input :set-max-delaytime 
	   :set-vdtime-mode :set-fdbgain-mod :set-fwdgain-mod :set-dirgain-mod :set-phase 
	   :get-fft-size :get-hop-size :set-window :set-fft-size :get-phases :set-bw :set-coeffs 
	   :set-r :set-gain-multiplier :get-real :get-imgaginary :get-outchannel :restart :set-interp-curve 
	   :set-dur :set-mode :set-offset :set-table :set-pan :get-left :get-right :get-track-id :get-tracks 
	   :set-threshold :set-if-gram :set-max-tracks :set-scale :set-timescale :set-input1 :set-input2 
	   :set-blurtime :set-hop-size :set-phase-input :set-mag-input :set-interp :set-freq-morph 
	   :set-amp-morph :set-mask :set-mask-table :set-mask-gain :set-filter-spec :set-filter-table 
	   :set-amount :get-magnitude :get-phase :set-wavetable :set-envtable :set-grain-size :set-pointer-rate 
	   :get-channels :get-size :get-output :read-file :write-file :get-file :get-mode :set-position :eof? 
	   :get-data-frames :get-position :get-status :get-header :wave? :wave-extensible? :wavex? :get-window-type 
	   :get-window-length :pvocex? :aiff? :set-env-envelope :make-table :set-freq-interval :set-note-interval 
	   :set-pvenv-envelope :set-pv-table :set-curve :set-curve-points :set-snd-input :set-usr-table :get-length
	   :get-table :lookup-index :destroy-synth :set-output))
  
  
(in-package #:sa)

(defctype :sndobj :pointer)
(defctype :sndobj_sndobj :pointer)
(defctype :sndobj_sndio :pointer)
(defctype :sndobj_table :pointer)
(defctype :sndobj_oscil :pointer)
(defctype :sndobj_oscilt :pointer)
(defctype :sndobj_oscili :pointer)
(defctype :sndobj_phoscili :pointer)
(defctype :sndobj_fastosc :pointer)
(defctype :sndobj_osc :pointer)
(defctype :sndobj_osci :pointer)
(defctype :sndobj_sndin :pointer)
(defctype :sndobj_sndread :pointer)
(defctype :sndobj_adsr :pointer)
(defctype :sndobj_iadsr :pointer)
(defctype :sndobj_buzz :pointer)
(defctype :sndobj_balance :pointer)
(defctype :sndobj_delayline :pointer)
(defctype :sndobj_tap :pointer)
(defctype :sndobj_tapi :pointer)
(defctype :sndobj_comb :pointer)
(defctype :sndobj_allpass :pointer)
(defctype :sndobj_stringflt :pointer)
(defctype :sndobj_pluck :pointer)
(defctype :sndobj_vdelay :pointer)
(defctype :sndobj_pitch :pointer)
(defctype :sndobj_loop :pointer)
(defctype :sndobj_fir :pointer)
(defctype :sndobj_filter :pointer)
(defctype :sndobj_tptz :pointer)
(defctype :sndobj_reson :pointer)
(defctype :sndobj_lp :pointer)
(defctype :sndobj_buttbp :pointer)
(defctype :sndobj_buttbr :pointer)
(defctype :sndobj_butthp :pointer)
(defctype :sndobj_buttlp :pointer)
(defctype :sndobj_ap :pointer)
(defctype :sndobj_lopass :pointer)
(defctype :sndobj_hipass :pointer)
(defctype :sndobj_hilb :pointer)
(defctype :sndobj_syncgrain :pointer)
(defctype :sndobj_mixer :pointer)
(defctype :sndobj_pan :pointer)
(defctype :sndobj_gain :pointer)
(defctype :sndobj_interp :pointer)
(defctype :sndobj_phase :pointer)
(defctype :sndobj_ring :pointer)
(defctype :sndobj_unit :pointer)
(defctype :sndobj_lookup :pointer)
(defctype :sndobj_lookupi :pointer)
(defctype :sndobj_rand :pointer)
(defctype :sndobj_randh :pointer)
(defctype :sndobj_randi :pointer)
(defctype :sndobj_fft :pointer)
(defctype :sndobj_ifft :pointer)
(defctype :sndobj_pva :pointer)
(defctype :sndobj_pvs :pointer)
(defctype :sndobj_pvread :pointer)
(defctype :sndobj_ifgram :pointer)
(defctype :sndobj_sinanal :pointer)
(defctype :sndobj_sinsyn :pointer)
(defctype :sndobj_resyn :pointer)
(defctype :sndobj_adsyn :pointer)
(defctype :sndobj_ifadd :pointer)
(defctype :sndobj_specmult :pointer)
(defctype :sndobj_specinterp :pointer)
(defctype :sndobj_pvmask :pointer)
(defctype :sndobj_pvtransp :pointer)
(defctype :sndobj_pvmix :pointer)
(defctype :sndobj_pvblur :pointer)
(defctype :sndobj_pvfilter :pointer)
(defctype :sndobj_pvmorph :pointer)
(defctype :sndobj_specpolar :pointer)
(defctype :sndobj_specsplit :pointer)
(defctype :sndobj_specthresh :pointer)
(defctype :sndobj_specvoc :pointer)
(defctype :sndobj_speccart :pointer)
(defctype :sndobj_speccombine :pointer)
(defctype :sndobj_specin :pointer)
(defctype :sndobj_convol :pointer)
(defctype :sndobj_sndfio :pointer)
(defctype :sndobj_sndwave :pointer)
(defctype :sndobj_sndwavex :pointer)
(defctype :sndobj_sndpvocex :pointer)
(defctype :sndobj_sndsinio :pointer)
(defctype :sndobj_sndaiff :pointer)
(defctype :sndobj_sndbuffer :pointer)
(defctype :sndobj_sndcoreaudio :pointer)
(defctype :sndobj_harmtable :pointer)
(defctype :sndobj_usrharmtable :pointer)
(defctype :sndobj_trisegtable :pointer)
(defctype :sndobj_envtable :pointer)
(defctype :sndobj_sndtable :pointer)
(defctype :sndobj_plntable :pointer)
(defctype :sndobj_hammingtable :pointer)
(defctype :sndobj_notetable :pointer)
(defctype :sndobj_usrdeftable :pointer)
(defctype :sndobj_lopasstable :pointer)
(defctype :sndobj_pvenvtable :pointer)
(defctype :sndobj_specenvtable :pointer)
(defctype :sndobj_pvtable :pointer)
(defctype :sndobj_impulsetable :pointer)
(defctype :sa_busread :pointer)
(defctype :sa_buswrite :pointer)
(defctype :sa_floatsig :pointer)
(defctype :sa_acos :pointer)
(defctype :sa_asin :pointer)
(defctype :sa_Atan :pointer)
(defctype :sa_Atan2 :pointer)
(defctype :sa_Cos :pointer)
(defctype :sa_Sin :pointer)
(defctype :sa_Tan :pointer)
(defctype :sa_Acosh :pointer)
(defctype :sa_Asinh :pointer)
(defctype :sa_Atanh :pointer)
(defctype :sa_Cosh :pointer)
(defctype :sa_Sinh :pointer)
(defctype :sa_Tanh :pointer)
(defctype :sa_Exp :pointer)
(defctype :sa_Exp2 :pointer)
(defctype :sa_Expm1 :pointer)
(defctype :sa_Log :pointer)
(defctype :sa_Log10 :pointer)
(defctype :sa_Log2 :pointer)
(defctype :sa_Log1p :pointer)
(defctype :sa_Logb :pointer)
(defctype :sa_Fabs :pointer)
(defctype :sa_Cbrt :pointer)
(defctype :sa_Hypot :pointer)
(defctype :sa_Pow :pointer)
(defctype :sa_Sqrt :pointer)
(defctype :sa_Ceil :pointer)
(defctype :sa_Floor :pointer)
(defctype :sa_Fdim :pointer)
(defctype :sa_Fmax :pointer)
(defctype :sa_Fmin :pointer)
(defctype :sa_Multiply :pointer)
(defctype :sa_Divide :pointer)
(defctype :sa_Add :pointer)
(defctype :sa_Subtract :pointer)
(defctype :sa_GreaterThan :pointer)
(defctype :sa_GreaterThanEqual :pointer)
(defctype :sa_LessThan :pointer)
(defctype :sa_LessThanEqual :pointer)
(defctype :sa_And :pointer)
(defctype :sa_Or :pointer)
(defctype :sa_Not :pointer)
(defctype :sa_If :pointer)
(defctype :sa_PVOCEXRead :pointer)
(defctype :sa_Synth :pointer)
(defctype :sa_RTAudioStream :pointer)
(defctype :sa_RTOutput :pointer)


(defctype :float* :pointer)
(defctype :char* :pointer)
(defctype :double* :pointer)


(defparameter DSP_STOPPED 0)
(defparameter DSP_RUNNING 2)
(defparameter DSP_PAUSED 3)

(defcstruct msg_link
	(msg :pointer)
	(ID :int)
	(previous :pointer))

(defcfun ("_wrap_SndObj_IsProcessing" SndObj_IsProcessing) :boolean
  (self :sndobj))

(defcfun ("_wrap_SndObj_GetError" SndObj_GetError) :int
  (self :sndobj))

(defcfun ("_wrap_SndObj_SndObjEqualSndObj" SndObj_SndObjEqualSndObj) :sndobj
  (self :sndobj)
  (obj :sndobj))

(defcfun ("_wrap_SndObj_SndObjSumAssignSndObj" SndObj_SndObjSumAssignSndObj) :pointer
  (self :sndobj)
  (obj :pointer))

(defcfun ("_wrap_SndObj_SndObjSubtractAssignSndObj" SndObj_SndObjSubtractAssignSndObj) :pointer
  (self :sndobj)
  (obj :pointer))

(defcfun ("_wrap_SndObj_SndObjMultiplyAssignSndObj" SndObj_SndObjMultiplyAssignSndObj) :pointer
  (self :sndobj)
  (obj :pointer))

(defcfun ("_wrap_SndObj_SndObjSumAssignFloat" SndObj_SndObjSumAssignFloat) :pointer
  (self :sndobj)
  (val :float))

(defcfun ("_wrap_SndObj_SndObjSubtractAssignFloat" SndObj_SndObjSubtractAssignFloat) :pointer
  (self :sndobj)
  (val :float))

(defcfun ("_wrap_SndObj_SndObjMultiplyAssignFloat" SndObj_SndObjMultiplyAssignFloat) :pointer
  (self :sndobj)
  (val :float))

(defcfun ("_wrap_SndObj_SndObjSumSndObj" SndObj_SndObjSumSndObj) :sndobj
  (self :sndobj)
  (obj :pointer))

(defcfun ("_wrap_SndObj_SndObjSubtractSndObj" SndObj_SndObjSubtractSndObj) :sndobj
  (self :sndobj)
  (obj :pointer))

(defcfun ("_wrap_SndObj_SndObjMultiplySndObj" SndObj_SndObjMultiplySndObj) :sndobj
  (self :sndobj)
  (obj :pointer))

(defcfun ("_wrap_SndObj_SndObjSumFloat" SndObj_SndObjSumFloat) :sndobj
  (self :sndobj)
  (val :float))

(defcfun ("_wrap_SndObj_SndObjSubtractFloat" SndObj_SndObjSubtractFloat) :sndobj
  (self :sndobj)
  (val :float))

(defcfun ("_wrap_SndObj_SndObjMultiplyFloat" SndObj_SndObjMultiplyFloat) :sndobj
  (self :sndobj)
  (val :float))

(defcfun ("_wrap_SndObj_SndObjShiftLeftFloat" SndObj_SndObjShiftLeftFloat) :void
  (self :sndobj)
  (val :float))

(defcfun ("_wrap_SndObj_SndObjShiftLeftFloatVector" SndObj_SndObjShiftLeftFloatVector) :void
  (self :sndobj)
  (vector :float*))

(defcfun ("_wrap_SndObj_SndObjShiftRightSndIO" SndObj_SndObjShiftRightSndIO) :void
  (self :sndobj)
  (out :pointer))

(defcfun ("_wrap_SndObj_SndObjShiftLeftSndIO" SndObj_SndObjShiftLeftSndIO) :void
  (self :sndobj)
  (in :pointer))

(defcfun ("_wrap_SndObj_PushIn" SndObj_PushIn) :int
  (self :sndobj)
  (vector :float*)
  (size :int))

(defcfun ("_wrap_SndObj_PopOut" SndObj_PopOut) :int
  (self :sndobj)
  (vector :float*)
  (size :int))

(defcfun ("_wrap_SndObj_AddOut" SndObj_AddOut) :int
  (self :sndobj)
  (vector :float*)
  (size :int))

(defcfun ("_wrap_SndObj_GetMsgList" SndObj_GetMsgList) :void
  (self :sndobj)
  (list :pointer))

(defcfun ("_wrap_SndObj_Enable" SndObj_Enable) :void
  (self :sndobj))

(defcfun ("_wrap_SndObj_Disable" SndObj_Disable) :void
  (self :sndobj))

(defcfun ("_wrap_SndObj_Output" SndObj_Output) :float
  (self :sndobj)
  (pos :int))

(defcfun ("_wrap_SndObj_GetVectorSize" SndObj_GetVectorSize) :int
  (self :sndobj))
